2012-09-02  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/setup.hh, setup.cc (Setup::leader): Added selector.

	* music/configuration.hh, configuration.cc
	(Configuration::leader): Added selector.

2012-08-27  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/spatial.hh, spatial.cc: Simplification made possible by
	previous change.

	* spatial.cc (SpatialNegotiator::send)
	(SpatialNegotiator::receive): First send size of receive buffer in
	order to avoid successive resizing. This is kinder to the memory
	allocator.

2012-08-25  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/memory.hh, memory.cc: New files.

	* Makefile.am, runtime.cc: Report memory usage for world rank #0
	using mallinfo.

	* music/runtime.hh, runtime.cc, music/connector.hh: Initial
	support for MultiConnector:s. MultiConnector is an object
	governing simultaneous communication through a set of
	Connector:s.

	* runtime.cc, music/connector.hh, music/subconnector.hh: Added
	some debugging/analysis code.

2012-08-23  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/scheduler.hh (Scheduler::Node::outputConnections),
	scheduler.cc: Pass outputConnections as a pointer rather than as a
	vector.

	* event_routing_map.cc (OutputRoutingMap::fillRouter): Bugfix:
	return -> continue.

	* interval.cc: New file.

	* music/interval.hh: Make Interval:s printable.

	* music/music-config.hh-in: (and many other files) Some #include
	reorganization: Let those who need it include music-config.hh as
	the common first header file.

	* music/ordered_ilist.hh (OrderedIList::iterator): Satisfy BG/P
	compiler which complained that an OrderedIList member creates a
	circular reference with respect to type.

2012-08-22  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/port.hh, port.cc (Port::checkIndexMap): New member.

	* port.cc (OutputPort::mapImpl, InputPort::mapImpl: Use
	checkIndexMap.

	* event_routing_map.cc (OutputRoutingMap::fillRouter): Ask